[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = ".*test.*"

[[tool.mypy.overrides]]
module = "valohai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_toolbelt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_mock.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py37"
ignore = [
    "E501",
    "B904",
    "B905",
]
select = [
    "ARG",
    "B",
    "E",
    "F",
    "I",
    "W",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG"]
