[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = ".*test.*"

[[tool.mypy.overrides]]
module = "valohai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_toolbelt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_mock.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py37"
ignore = [
    "E501",
    "B904",
    "B905",
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "RET504", # Unnecessary variable assignment before `return` statement
    "SIM105", # Use `contextlib.suppress(TypeError)` instead of try-except-pass
]
select = [
    "ARG",
    "ANN", # annotations
    "B", # bugbear
    "C", # complexity & comprehensions
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "SIM", # simplify
    "UP", # pyupgrade
    "W", # pycodestyle
]
[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "ANN"]
