[metadata]
name = valohai-cli
version = attr:valohai_cli.__version__
author = Valohai
author_email = hait@valohai.com
license = MIT

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
install_requires =
    click>=7.0
    gitignorant>=0.1.2
    requests-toolbelt>=0.7.1
    requests>=2.0.0
    typing-extensions>=3.7
    valohai-utils>=0.1.10
    valohai-yaml>=0.21.1

[options.entry_points]
console_scripts =
    vh=valohai_cli.cli:cli

[options.packages.find]
include =
    valohai_cli*

[bdist_wheel]
python-tag = py3

[flake8]
ignore = E125,E501,W503,W504
per-file-ignores =
    tests/*: U100
unused-arguments-ignore-stub-functions = true

[pydocstyle]
ignore = D100,D104,D203,D212

[tool:pytest]
norecursedirs = .git .tox
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

[isort]
profile = black
line_length = 120
multi_line_output = 3
wrap_length = 120
