[metadata]
name = valohai-cli
version = attr:valohai_cli.__version__
author = Valohai
author_email = hait@valohai.com
url = https://github.com/valohai/valohai-cli
description = Command line client for Valohai
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
install_requires =
    click>=7.0
    gitignorant>=0.2.0
    requests-toolbelt>=0.7.1
    requests>=2.0.0
    typing-extensions>=3.7
    valohai-utils>=0.3.0
    valohai-yaml>=0.25.2

[options.entry_points]
console_scripts =
    vh=valohai_cli.cli:cli

[options.packages.find]
include =
    valohai_cli*

[bdist_wheel]
python-tag = py3
